# sejm_scraper

./: .cruft.json  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  README.md  devenv.nix  devenv.yaml  docker-compose.yml  prek.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: python.yml  test.yml
.helix/: languages.toml
src/sejm_scraper/: __init__.py  __main__.py  api_client.py  api_schemas.py  cli.py  database.py  database_key_utils.py  dump_to_parquet.py  logging_config.py  main.py  pipeline.py  process.py  schemas.py  scrape.py  scrape_party_links.py  scrape_votes.py  scrape_votings.py  scraper.py  utils.py
tests/: conftest.py  database_key_utils_test.py  pipeline_test.py  test_api_client.py  test_cli.py  test_database.py  test_database_key_utils.py  test_logging_config.py  test_pipeline.py  test_process.py  test_scrape.py
