[project]
name = "sejm_scraper"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "duckdb>=1.3.0",
    "duckdb-engine>=0.17.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "typer>=0.23.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.6",
    "prek>=0.0.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.11.13",
    "ty>=0.0.16",
]

[project.scripts]
sejm-scraper = "sejm_scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sejm_scraper"]

[tool.ruff]
target-version = "py312"
line-length = 80
lint.select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
lint.ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like dict.get(... True)
    "FBT003",
    # Ignore checks for possible passwords
    "S105",
    "S106",
    "S107",
    # Ignore complexity
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "D211",    # no-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "ISC001",  # single-line-implicit-string-concatenation
    "UP007",   # keep Union syntax for pydantic
]
lint.unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["sejm_scraper"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["sejm_scraper"]

[tool.coverage.report]
show_missing = true

# [tool.ty.environment]
# python = "./.devenv/state/venv"
